--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "babel-loader": "8.0.4",
     "firebase": "^5.8.3",
     "history": "^4.7.2",
     "react": "^16.7.0",
@@ -25,5 +26,8 @@
     "not dead",
     "not ie <= 11",
     "not op_mini all"
-  ]
+  ],
+  "resolutions": {
+    "caniuse-lite": "1.0.30000957"
+  }
 }
